Fix z-index popup for toolbar
ERM37546

[4.5.x]

(cherry picked from commit 7357e33276da6453dec2957a3b6f748a8c3e074c)

--- a/resources/stylesheets/fixes/ve-fixes.css
+++ b/resources/stylesheets/fixes/ve-fixes.css
@@ -36,3 +36,7 @@ body.mediawiki .ve-init-sa-target-toolbar > .oo-ui-toolbar-bar > .oo-ui-toolbar-
     padding-right: 3px;
 }
 
+/* Fix inspector popup behind toolbar - ERM37546 */
+.oo-ui-popupWidget.ext-visualEditorPlus-inlineTextInspector {
+	z-index: 2;
+}
